[tool.poetry]
name = "rlangchain"
version = "0.1.0"
description = ""
authors = ["Tonoy Akanda <tonoy.aka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-cpp-python = "^0.1.74"
openai = "^0.27.8"
langchain = "^0.0.240"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"